# embedded-nodejs-example

./: .gitignore  Vagrantfile  windows-trouble_shooting.txt
src/: CMakeLists.txt  hello_world.js  main.cc
